completed the momentum clone extension

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Momentum Clone</title>
 </head>
 <body>
-    <p>PlaceHolder</p>
+    <img id="image"/>
+    <div class="text-container">
+        <div class="text-wrapper">
+            <h1>What's your goal today?</h1>
+            <input type="text" id="goal"/>
+        </div>
+    </div>
+    <script src="script/script.js"></script>
 </body>
 </html>
